--- a/style.css
+++ b/style.css
@@ -1,222 +1,89 @@
-@import url('https://fonts.googleleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-*
 
-{   margin: 0  ;
-    padding: 0 ;
-    box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
+*{
+
+    padding: 0;
+    margin: 0;
 }
-body
-{
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    min-height: 100vh ;
-    background: #23242a;
-}
-.box
-{
-    position:relative ;
-    width: 380px;
-    height: 420px;
-    background: #1c1c1c;
-    border-radius: 8px;
-  overflow:hidden;
-}
-.box::before
-{
-   content: ''; 
-   position:absolute;
-   top:-50%;
-   left: -50%;
-   width: 380px;
-   height: 420px;
-   background: linear-gradient(0deg,transparent,transparent,#45f3ff,#45f3ff,#45f3ff);
-    z-index:1;
-    transform-origin:bottom right;
-    animation:animate 6s linear infinite;    
-}
-.box::after
-{
-   content: ''; 
-   position:absolute;
-   top:-50%;
-   left: -50%;
-   width: 380px;
-   height: 420px;
-   background: linear-gradient(0deg,transparent,transparent,#45f3ff,#45f3ff,#45f3ff);
-    z-index:1;
-    transform-origin:bottom right;
-    animation:animate 6s linear infinite;
-     
-    animation-delay:-3s;
-}
-.borderLine
-{position: absolute;
-top: 0;
-inset: 0;
-}
-.borderLine::before
-{
-    content: ''; 
-   position:absolute;
-   top:-50%;
-   left: -50%;
-   width: 380px;
-   height: 420px;
-   background: linear-gradient(0deg,transparent,transparent,#ff2770,#ff2770,#ff2770);
-    z-index:1;
-    transform-origin:bottom right;
-    animation:animate 6s linear infinite;
-     
-    animation-delay:-1.5s;
+html,body #fullheight{
+    min-height: 100%!important;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: black ;
 
 }
-.borderLine::after
-{
-    content: ''; 
-   position:absolute;
-   top:-50%;
-   left: -50%;
-   width: 380px;
-   height: 420px;
-   background: linear-gradient(0deg,transparent,transparent,#ff2770,#ff2770,#ff2770);
-    z-index:1;
-    transform-origin:bottom right;
-    animation:animate 6s linear infinite;
-     
-    animation-delay:-4.5s;
-}
+.container{
 
-@keyframes animate
-{
-    0%
-    {
-        transform: rotate(0deg);
-    }
-    100%
-    {
-       transform: rotate(360deg);
+height: 10%;
+background-color: black ;
 }
-
+.result{
+    display: flex ;
+    justify-content: flex-end;
+    align-items: flex-end;
+    color: white ;
+    height: 39%;
 }
-   
-
-.box form
-{
-    position:absolute ;
-    inset: 4px;
-    background: #222;
-    padding: 50px 40px ;
-    border-radius: 8px;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-   
+.result span{
+    margin-right: 60px;
+    font-size: 210px ;
+    justify-self: flex-end;
 }
-.box form h2
-{
-    color: #fff;
-    font-weight: 500;
-    text-align: center;
-    letter-spacing: 0.1em;
- }
- .box form .inputBox  
- 
- {
-    position: relative;
-    width: 300px ;
-    margin-top: 35px ;
-
- }
- .box form .inputBox input
- {
-    position: relative;
+.buttons{
     width: 100%;
-    padding: 20px 10px 10px ;
-    background: transparent ;
-    outline: none ;
+    height:60% ;
+    background-color: black ;
+    display: grid ;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+.item{
+
+display: flex ;
+justify-content: center;
+align-items: center ;
+font-size: 100px ;
+color: white ;
+border-radius: 100%;
+width: 210px;
+height: 210px ;
+padding: 10px;
+cursor: pointer ;
+align-self: center ;
+justify-self: center ;
+}
+.percent {
+    background-color: #A5A5A5;
     border: none ;
-    box-shadow: none;
-    color: #23242a;
-    font-size: 1em ;
-    letter-spacing: 0.05em;
-    transition: 0.5s ;
-    z-index: 10;
- }
- .box form .inputBox span
- {
-        position: absolute ;
-        left:0;
-        padding: 20px 0px 10px ;
-        pointer-events: none;
-        color: #8f8f8f;
-        font-size: 1em ;
-        letter-spacing: 0.05em;
-        transition: 0.5s ;
- }
- .box form .inputBox input:valid ~span,
- .box form .inputBox input:focus ~span
-{
-    color: #fff;
-    font-size: 0.75em;
-    transform: translateY(-34px);
+    color: black ;
 }
-.box form .inputBox i
-{
-    position: absolute ;
-    left:0;
-    bottom:0;
-    width: 100%;
-    height: 2px ;
-    background: #fff;
-    border-radius: 4px !;
-    overflow: hidden;
-    transition: 0.5s ;
-    pointer-events: none ;
+.item1{
+    background-color: #A5A5A5;
+    border: none ;
+    
+}
+.item3{
+    background-color: #FF9F0A;
+    border: none ;
+
 
 }
-
-.box form .inputBox input:valid ~i,
-.box form .inputBox input:focus ~i
-{
-    height: 44px ;
+.numbers,.comma {
+    background-color: #343434;
+    border: none;
 }
-.box form .links
-{
- display: flex ;
- justify-content:space-between ;
-
+.negative,.clear {
+    color: black;
 }
-.box form .links a
-{
- margin: 10px 0;
- font-size: 0.75em;
- color:#8f8f8f;
-text-decoration: none ;
-
+.itemZero {
+background-color: #343434;
+width: 435px ;
+border-radius: 135px;
+grid-column: span 2;
+border: none;
 }
-.box form .links a:hover,
-.box form .links a:nth-child(2)
-
-{
-color: #fff;
+.selectedSign{
+    background-color: white;
+    color: #FF9F0A;
 }
-.box form  input[type="submit"]
-{
-border: none ;
-outline: none;
-padding: 9px 25px;
-background: #fff;
-cursor: pointer;
-font-size: 0.9em;
-border-radius: 4px ;
-font-weight: 600;
-width: 100px;
-margin-top: 10px;
+.chagedStyle{
+    font-size: 10px;
 }
-.box form input[type="aubmit"]:active
-{
-opacity: 0.8;
-}
-
